assets/css/style.css
* {
    transition: all .3s ease-out;
}

html {
    height: 100%;
}

body {
    height: 100%;
    background-color: rgb(238, 238, 238);
}

.dark-mode-body {
    background-color: rgb(43, 43, 43);
}

.jumbotron {
    background-color: rgb(238, 238, 238);
    width: 100%;
    height: 30vh;
}

.dark-mode-jumbotron {
    background-color: rgb(43, 43, 43);
}

.jumbotron h1,
.jumbotron h6,
main h6 {
    color: rgb(57, 57, 57);
    padding: 2rem;
}

.dark-mode-jumbotron h1,
.dark-mode-jumbotron h6,
.dark-mode-main h6 {
    color: rgb(208, 208, 208);
}

#switch-container {
    padding: 1rem;
}

.switch {
    position: relative;
    display: inline-block;
    width: 60px;
    height: 34px;
}

.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
}

.slider:before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
}

.dark-mode-slider:before {
    background-color: black;
}

input:checked+.slider {
    background-color: #ccc;
}

input:focus+.slider {
    box-shadow: 0 0 1px #ccc;
}

input:checked+.slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
    border-radius: 34px;
}

.slider.round:before {
    border-radius: 50%;
}

#switch-container h6 {
    margin: auto;
    padding: .5rem;
    font-size: small;
}

main {
    background-color: #fff;
    width: 100%;
    height: 100%;
    text-align: center;
}

.dark-mode-main {
    background-color: rgb(24, 24, 24);
}

.btn {
    color: #fff;
    background-color: rgb(117, 65, 207);
    width: 100px;
    height: 50px;
}

.btn:hover {
    background-color: white;
    color: rgb(117, 65, 207);
    border: solid 1px rgb(117, 65, 207);
}

.btn:focus {
    background-color: white;
    color: rgb(117, 65, 207);
    border: solid 1px rgb(117, 65, 207);
}

.dark-mode-btn {
    background-color: rgb(43, 43, 43);
    color: #ccc;
    border: none !important;
}

.dark-mode-btn:hover,
.dark-mode-btn:focus {
    background-color: #ccc;
    color: rgb(43, 43, 43);
}

#userInput {
    width: 100px;
    height: 50px;
    outline: none;
    border: solid 1px rgb(57, 57, 57);
}

.dark-mode-userInput {
    background-color: #ccc;
}

#answer {
    font-size: calc(4rem + 1.5vw);
}

.dark-mode-answer {
    color: #ccc;
}

.modal {
    display: none;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgb(0, 0, 0);
    background-color: rgba(0, 0, 0, 0.6);
}

.modal-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: #fefefe;
    padding: 20px;
    border: 1px solid #888;
    width: fit-content;
}

.dark-mode-modal-content {
    color: #ccc;
    background-color: rgb(57, 57, 57);
    border: none;
}

footer {
    background-color: rgb(238, 238, 238);
    width: 100%;
    height: 30vh;
    display: flex;
    justify-content: center;
    align-items: flex-start;
    padding-bottom: 10px;
}

.dark-mode-footer {
    background-color: rgb(43, 43, 43);
}

.icon {
    color: black !important;
    transition: all .3s ease-out;
}

.dark-mode-icon {
    color: rgb(208, 208, 208) !important;
}

footer a {
    text-decoration: none;
    padding: 3rem;
}

.dark-mode-footer a {
    color: #ccc;
}

.dark-mode-footer a:hover {
    color: #fff;
}

